--- a/templates/rest_framework/api.html
+++ b/templates/rest_framework/api.html
@@ -3,7 +3,7 @@
 {% block title %}{% if name %}{{ name }} – {% endif %}Tech Versus Me{% endblock %}
 
 {% block branding %}
-    <a class='navbar-brand' href='https://techversus.me/' target="_blank">
+    <a class='navbar-brand' href='https://tvm.nirantak.com/' target="_blank">
         Tech Versus Me
     </a>
 {% endblock %}
